# Facial-Image-Registration

./: README.md
example/: Parameters.txt
src/: CMakeLists.txt  elxTransformDirectionalStrainEnergyPenalty.cxx  elxTransformDirectionalStrainEnergyPenalty.h  elxTransformDirectionalStrainEnergyPenalty.hxx  itkTransformDirectionalStrainEnergyPenaltyTerm.h  itkTransformDirectionalStrainEnergyPenaltyTerm.hxx
